# redfin

./: .ghci  .gitignore  LICENSE  README.md  example.smt2  redfin.cabal  stack.yaml
benchmark/: Main.hs
motor_control_example/: mctrl.py
paper/: Makefile  acmart.cls  biblio.bib  example.smt2  main.tex
paper/data/: array_sum_verification_benchmark.csv  array_sum_verification_time.csv
paper/tex/: conclusion-future-work.tex  discussion.tex  intro.tex  redfin-formal.tex  redfin.tex  related-work.tex  state.tex
papers/acm-tecs-paper/: .gitignore  1-intro.tex  2-redfin-isa.tex  3-model-state.tex  4-redfin-formal.tex  5-discussion.tex  5-motor-control.tex  6-discussion.tex  6-related-work.tex  7-related-work.tex  _region_.tex  main.tex  refs.bib  response.md
papers/auto/: main.el
papers/haskell-symposium-2019/: Makefile  biblio.bib  main.tex
papers/haskell-symposium-2019/data/: array_sum_verification_benchmark.csv
papers/haskell-symposium-2019/tex/: instructions.tex  intro.tex  redfin-formal.tex  semantics.tex  state.tex
src/: Redfin.hs
src/Redfin/: Assembly.hs  Decode.hs  Decoder.hs  Fixed.hs  InstructionSet.hs  Listing.hs  Mnemonics.hs  SBV.hs  Semantics.hs  Simulate.hs  Types.hs  Verification.hs  Verify.hs
src/Redfin/Data/: Fixed.hs
src/Redfin/Examples/: Add.hs  Common.hs  CyclicShift.hs  Energy.hs  GCD.hs  ManhattanDistance.hs  MotorControl.hs  MotorControlLoopInvariant.hs  Sum.hs
src/Redfin/Examples/Energy/: OverflowHunt.hs  Units.hs  Units1.hs  WCET.hs
src/Redfin/Language/: Expression.hs  Newton.hs  Units.hs
src/Redfin/Language/Examples/: Common.hs  Energy.hs  OverflowHunt.hs  Power.hs
src/Redfin/Verification/: Assembly.hs  Decode.hs  Semantics.hs  Verify.hs
test/: Test.hs  Verify.hs
tests/: Main.hs  TestSuite.hs
