name:          redfin
version:       0.0.1
synopsis:      Specification and verification of the REDFIN sequencer
author:        Andrey Mokhov <andrey.mokhov@gmail.com>, github: @snowleopard
maintainer:    Andrey Mokhov <andrey.mokhov@gmail.com>, github: @snowleopard
copyright:     Andrey Mokhov, 2017
homepage:      https://github.com/tuura/redfin
category:      Hardware
build-type:    Simple
cabal-version: >=1.10
extra-source-files: README.md
                  , tests/*.hs

source-repository head
    type:     git
    location: https://github.com/tuura/redfin.git

library
    hs-source-dirs:     src
    exposed-modules:    Redfin
                        Redfin.Assembly
                        Redfin.Decode
                        Redfin.Listing
                        Redfin.Language.Expression
                        Redfin.Simulate

                        Redfin.Examples.Common
                        Redfin.Examples.Energy
                        Redfin.Examples.Energy.Units
                        Redfin.Examples.Energy.WCET
                        Redfin.Examples.Energy.OverflowHunt
                        Redfin.Examples.ManhattanDistance
                        Redfin.Examples.Sum
                        Redfin.Examples.MotorControl
                        Redfin.Semantics
                        Redfin.Data.Fixed
    build-depends:      QuickCheck,
                        base       >= 4.8 && < 5,
                        containers >= 0.5.7,
                        directory >= 1.3.3.0,
                        extra,
                        mtl,
                        pretty-simple,
                        sbv >= 7.10,
                        text,
                        time >= 1.8.0.2,
                        units >= 2.4.1.1,
                        units-defs
    default-language:   Haskell2010
    default-extensions: FlexibleContexts
                        GeneralizedNewtypeDeriving
                        RecordWildCards
                        ScopedTypeVariables
                        TupleSections
                        TypeFamilies
    other-extensions:   BinaryLiterals
                        DeriveFunctor
    GHC-options:        -O2 -Wall -fwarn-tabs
                        -fno-warn-unused-local-binds
                        -fno-warn-unused-matches
                        -fno-warn-type-defaults
                        -fno-warn-unused-imports
                        -fno-warn-name-shadowing
                        -fno-warn-unused-top-binds

test-suite main
  type:             exitcode-stdio-1.0
  main-is:          tests/Main.hs
  default-language: Haskell2010
  build-depends:    QuickCheck
                  , base >= 4.7 && < 5
                  , directory >= 1.3.3.0
                  , redfin
                  , time >= 1.8.0.2

executable benchmark
  main-is:              Main.hs
  hs-source-dirs:       benchmark
  build-depends:        base,
                        directory,
                        directory >= 1.3.3.0,
                        redfin,
                        sbv,
                        time,
                        time >= 1.8.0.2