name:          redfin
version:       0.0.1
synopsis:      Specification and verification of the REDFIN sequencer
author:        Andrey Mokhov <andrey.mokhov@gmail.com>, github: @snowleopard,
               Georgy Lukyanov <mail@geo2a.info>, github: @geo2a
maintainer:    Georgy Lukyanov <mail@geo2a.info>, github: @geo2a
copyright:     Andrey Mokhov, Georgy Lukyanov, 2017-2020
homepage:      https://github.com/tuura/redfin
category:      Hardware
build-type:    Simple
cabal-version: >=1.10
extra-source-files: README.md

source-repository head
    type:     git
    location: https://github.com/tuura/redfin.git

library
    hs-source-dirs:     src
    exposed-modules:    Redfin
                        Redfin.Types
                        Redfin.Assembly
                        Redfin.Decode
                        Redfin.Listing
                        Redfin.Language.Expression
                        Redfin.Data.Fixed
                        Redfin.Simulate

                        Redfin.Examples.Common
                        Redfin.Examples.Energy
                        Redfin.Examples.Energy.Units
                        Redfin.Examples.Energy.WCET
                        Redfin.Examples.ManhattanDistance
                        Redfin.Examples.Sum
                        Redfin.Semantics

    build-depends:      QuickCheck,
                        base       >= 4.8 && < 5,
                        containers >= 0.5.7,
                        directory >= 1.3.3.0,
                        extra,
                        generic-random >= 1.3.0.1,
                        mtl,
                        pretty-simple,
                        sbv >= 7.10,
                        text,
                        time >= 1.8.0.2,
                        units >= 2.4.1.1,
                        units-defs
    default-language:   Haskell2010
    default-extensions: FlexibleContexts
                        GeneralizedNewtypeDeriving
                        RecordWildCards
                        ScopedTypeVariables
                        TupleSections
                        TypeFamilies
                        DataKinds
                        BinaryLiterals
                        DeriveFunctor
    GHC-options:        -O2 -Wall -fwarn-tabs
                        -fno-warn-unused-local-binds
                        -fno-warn-unused-matches
                        -fno-warn-type-defaults
                        -fno-warn-unused-imports
                        -fno-warn-name-shadowing
                        -fno-warn-unused-top-binds

test-suite tests
  GHC-options:     -Wall
                   -Werror=incomplete-replacements
  default-language: Haskell2010
  hs-source-dirs:   tests
  main-is:          TestSuite.hs
  other-modules:
  type:             exitcode-stdio-1.0

  build-depends:
    base            >= 4.7 && < 5,
    containers,
    HUnit,
    QuickCheck,
    tasty,
    tasty-hunit,
    tasty-quickcheck,
    sbv,
    generic-random,
    redfin

executable benchmark
  main-is:              Main.hs
  hs-source-dirs:       benchmark
  build-depends:        base,
                        directory,
                        directory >= 1.3.3.0,
                        redfin,
                        sbv,
                        time,
                        time >= 1.8.0.2